Easier to see wishes for groups, and which groups a user is affiliated with
